syntax = "proto3";

package atomix.primitive;

// Namespaced primitive name
message Name {
    string name = 1;
    string namespace = 2;
}

message GetPrimitivesRequest {
    string type = 1;
}

message GetPrimitivesResponse {
    repeated PrimitiveInfo primitives = 1;
}

message PrimitiveInfo {
    string type = 1;
    Name name = 2;
}

// Primitive service
service PrimitiveService {

    // GetPrimitives returns a list of primitives
    rpc GetPrimitives (GetPrimitivesRequest) returns (GetPrimitivesResponse) {}

}
